# cl-gen-ispc-mandelbrot

./: .gitignore  CMakeLists.txt  README.md  gen.lisp  makefile
source/: main.cpp  main.pcm  mandelbrot.cachegrind  mandelbrot.ispc  mandelbrot_ispc.h
